--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "express-session": "^1.16.2",
+    "express-sessions": "^1.0.6",
     "http-errors": "~1.6.3",
     "mongo": "^0.1.0",
     "mongoose": "^5.6.10",
