--- a/package.json
+++ b/package.json
@@ -6,18 +6,20 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^8.1.0",
     "ejs": "~2.6.1",
-    "express": "~4.16.1",
+    "express": "^4.16.4",
     "express-session": "^1.16.2",
     "express-sessions": "^1.0.6",
     "http-errors": "~1.6.3",
     "mongo": "^0.1.0",
-    "mongoose": "^5.6.10",
+    "mongoose": "^5.6.11",
     "morgan": "~1.9.1",
     "passport": "^0.4.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "stripe": "^7.8.0"
   }
 }
