--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "express-session": "^1.16.2",
     "express-sessions": "^1.0.6",
     "http-errors": "~1.6.3",
+    "method": "^2.0.0",
+    "method-override": "^3.0.0",
     "mongo": "^0.1.0",
     "mongoose": "^5.6.11",
     "morgan": "~1.9.1",
+    "override": "0.0.1",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^2.0.0",
     "stripe": "^7.8.0"
